--- a/SparkAppStream/src/main/resources/application.conf
+++ b/SparkAppStream/src/main/resources/application.conf
@@ -1,6 +1,9 @@
 kafka {
-    brokers = "10.0.3.8:9092,10.0.3.9:9092,10.0.3.10:9092"
-    groupID = "test-consumer-group"
+  brokers = "10.0.3.8:9092,10.0.3.9:9092,10.0.3.10:9092"
+  groupID = "test-consumer-group"
+}
+hive {
+  table = "metrics"
 }
 
 
