--- a/SparkAggregationApp/src/main/resources/application.conf
+++ b/SparkAggregationApp/src/main/resources/application.conf
@@ -1,12 +1,15 @@
 psql {
-    driver = "org.postgresql.Driver"
-    connection = "jdbc:postgresql://"
-    host = "alcyona.gemelen.net"
-    port = "5432"
-    database = "app"
-    user = "app"
-    password = "app password"
-    driver = "org.postgresql.Driver"
+  driver = "org.postgresql.Driver"
+  connection = "jdbc:postgresql://"
+  host = "alcyona.gemelen.net"
+  port = "5432"
+  database = "app"
+  user = "app"
+  password = "app password"
+  driver = "org.postgresql.Driver"
+}
+hive {
+  table = "aggregation"
 }
 
 
