Add new hive configs

--- a/SparkAppStream/src/main/resources/application.conf
+++ b/SparkAppStream/src/main/resources/application.conf
@@ -4,6 +4,8 @@ kafka {
 }
 hive {
   table = "sensors"
+  metastore = "thrift://delta.gemelen.net:9083"
+  warehouse = "hdfs://alpha.gemelen.net:8020/apps/hive/warehouse"
 }
 
 
