Add checkpoint folder

--- a/SparkAppStream/src/main/resources/application.conf
+++ b/SparkAppStream/src/main/resources/application.conf
@@ -7,5 +7,8 @@ hive {
   metastore = "thrift://delta.gemelen.net:9083"
   warehouse = "hdfs://alpha.gemelen.net:8020/apps/hive/warehouse"
 }
+spark{
+  checkpoint = "hdfs://alpha.gemelen.net:8020/apps/checkpoint"
+}
 
 
