Add hive configs

--- a/SparkAggregationApp/src/main/resources/application.conf
+++ b/SparkAggregationApp/src/main/resources/application.conf
@@ -7,9 +7,16 @@ psql {
   user = "app"
   password = "app password"
   driver = "org.postgresql.Driver"
+  table {
+     data = "sensor_data"
+     location = "sensor_location"
+  }
 }
 hive {
   table = "aggregation"
+  metastore = "thrift://delta.gemelen.net:9083"
+  warehouse = "hdfs://alpha.gemelen.net:8020/apps/hive/warehouse"
 }
+
 
 
