--- a/SparkAppStream/src/main/resources/application.conf
+++ b/SparkAppStream/src/main/resources/application.conf
@@ -1,13 +1,16 @@
 kafka {
+  //brokers = "localhost:9092"
+  //  groupID = "test-consumer-group"
   brokers = "10.0.3.8:9092,10.0.3.9:9092,10.0.3.10:9092"
   groupID = "test-consumer-group"
+  topic = "spark"
 }
 hive {
   table = "sensors"
   metastore = "thrift://delta.gemelen.net:9083"
   warehouse = "hdfs://alpha.gemelen.net:8020/apps/hive/warehouse"
 }
-spark{
+spark {
   checkpoint = "hdfs://alpha.gemelen.net:8020/apps/checkpoint"
 }
 
