--- a/FlinkStreaming/src/main/resources/application.conf
+++ b/FlinkStreaming/src/main/resources/application.conf
@@ -1,9 +1,9 @@
 kafka {
-  //brokers = "localhost:9092"
-  //groupID = "test-consumer-group"
-  brokers = "10.0.3.8:9092,10.0.3.9:9092,10.0.3.10:9092"
+  brokers = "localhost:9092"
   groupID = "test-consumer-group"
-  topic = "spark"
+  //brokers = "10.0.3.8:9092,10.0.3.9:9092,10.0.3.10:9092"
+  //groupID = "test-consumer-group"
+  topic = "kafka"
 }
 psql {
   driver = "org.postgresql.Driver"
